# psim-c

./: CMakeLists.txt  README.md
include/: psim.h
include/psim/: engine.h  game-state.h  helpers.h  random.h
include/psim/engine/: input.h  window.h
src/: game-state.c  main.c  random.c
src/engine/: input.c  window.c
